--- a/lab-python-data-structures.ipynb
+++ b/lab-python-data-structures.ipynb
@@ -98,7 +98,7 @@
    ],
    "source": [
     "# 4. - 6.\n",
-    "customer_orders = set() # initiate empty set\n",
+    "customer_orders = set()\n",
     "counter = 0\n",
     "\n",
     "while counter < 3:\n",
@@ -169,6 +169,12 @@
     "for item in customer_orders:\n",
     "    inventory[item] = inventory[item] - 1\n",
     "print(inventory)\n",
+    "\n",
+    "\"\"\"\"\"\"\n",
+    "# this would have been the expected way to do 9. according to our current knowledge\n",
+    "inventory['t-shirt'] -= 1\n",
+    "\n",
+    "\"\"\"\"\"\"\n",
     "\n",
     "for key, value in inventory.items():\n",
     "    print(f'item: {key}, avilable: {value}')\n"
